--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,8 +211,11 @@ input[name="pure-nav"] {
   height: 150px;
   margin-top: 10px;
   padding: 10px;
-  font-size: 40px;
+  font-size: 16px;
   margin-bottom: 20px;
+}
+#whatsapp-desc::placeholder {
+  font-size: 40px;
 }
 #from {
   margin-top: 20px;
